--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,6 @@ inc/
 /pm_to_blib
 /*.zip
 
-# output test
+# test stuff
 Net-DHCP-Config-Utilities/t/iscdhcpd/output
+Net-DHCP-Config-Utilities/bin/.exists
